# DJSDMSPlayer

./: .gitignore  README.md  readme.md  settings.gradle
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  dms_jni_wrapper.cpp  dms_player.cpp  dms_player.h
app/src/main/cpp/demo/: dmsregcli.cpp  dmsregsvc.cpp  libdmstest.cpp
app/src/main/include/: libdms.h  libdmsreg.h
app/src/main/java/com/djs/djsdmsplayer/: DmsDataSource.java  DmsExtractor.java  DmsPlayer.java  FilePicker.java  MainActivity.java  PlayerViewModel.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
